isofw-web/src/components/project/style.sass
.flex, .flex1
  display: flex !important

.flex1
  flex: 1
.column
  flex-direction: column
.row
  flex-direction: row
.center
  justify-content: center
.verticalCenter
  align-items: center
.centerText
  text-align: center
.fullWidthList, .inlineList
    display: flex
    flex: 1
.inlineList
  display: flex
  flex-direction: row
  li
    display: inline-block
    list-style-type: none
.smallerButton
  font-size: 1rem
  line-height: 1rem
  height: 1rem
.currentBox, .titleBox, .customButton
  background-color: white
  padding: 0.4rem
  margin: 0pt 1.4rem
  border-radius: 10pt
  font-size: 1.4rem
  text-align: center
  color: black
  .boxTopLeft
    margin-top: -1.4rem
    margin-left: -1.4rem
  .boxTopRight
    margin-top: -1.4rem
    margin-right: -1.4rem
  &.withMargin
    margin-right: 1rem
  &.raised
    border: 2pt solid orange
    padding: calc(0.4rem - 2pt)
    .attentionText
      color: orange
  &.raised2
    border: 4pt solid red
    padding: calc(0.4rem - 4pt)
    .attentionText
      color: red
.marginTopBottom
  margin: 1rem 0pt
.customButton
  cursor: pointer
.shotNumber
  font-size: 5rem
  line-height: 1
.noMargin
  margin: 0pt !important
.subtitleBox
  display: flex
  flex-direction: column
  color: black !important
  box-sizing: content-box
  background-color: #f7f7f8
  border: 1pt solid #c4c4c4
  border-top-width: 0pt
  font-size: 1.5rem
  padding-top: 0.1rem
  padding-bottom: 0.1rem
  a
    color: black
  &.withPadding
    padding-left: 0.7rem
    padding-right: 0.7rem
  .subtitle
    font-size: 0.65rem
.presetCards
  display: inline
  .card
    display: inline-block
    min-width: 24vw
    max-width: 24vw
.dot
  border-radius: 30pt
  width: 1rem
  height: 1rem
  &.red
    background-color: red
  &.green
    background-color: green
.isActive
  background-color: rgba(255, 0, 0, 0.2)
  &:hover
    background-color: rgba(255, 0, 0, 0.3) !important
.hugeButton
  font-size: 4rem
  line-height: 4rem
  height: 4.5rem
.shotEditorInfoBox
  min-width: 150pt
  max-width: 150pt
  min-height: 130pt

